# video-clipper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  temp-audio.m4a
.github/workflows/: ci.yml
docs/: usage.md
tests/: test_analyzer.py
videoclipper/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
videoclipper/analyzer/: __init__.py  audio_analyzer.py  base.py  content_analyzer.py  scene_detector.py
videoclipper/clipper/: __init__.py  base.py  segment_selector.py  transitions.py  video_editor.py
videoclipper/models/: __init__.py  segment.py  video.py
videoclipper/tools/: __init__.py  audio_analyzer.py
videoclipper/transcriber/: base.py  whisper_transcriber.py
videoclipper/utils/: __init__.py  file_utils.py  validation.py  youtube.py
